@@ -1,3 +1,9 @@
+15 August 2007
+
+* A few POP3 servers supply an APOP cookie and then refuse the APOP command.
+  Handle them with a "no-apop" flag to POP3 account statements to disable
+  APOP. Reported by Frank Terbeck.
+
 10 August 2007
 
 * Combine append into write and exec into pipe even more to get rid of
@@ -522,4 +528,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.138 2007-08-10 17:17:40 nicm Exp $
+$Id: CHANGES,v 1.139 2007-08-15 13:30:08 nicm Exp $
